# Changelog
### Release v0.7.0, Codename "Cobalt".

Okay, before I tell you all about the new features and bug fixes, I'd like to thank
everybody that is actively using Macchina, and especially our contributors.

I'm very grateful that people find Macchina as interesting as I do. Our codebase has grown from a small,
glued-together set of instructions, to two independent packages, providing users and developers
the opportunity to inspect the code and actually enjoy doing so :)

**Let's take a look at the new changes:**

- ASCII art now adapts to how many readouts are displayed, as suggested by @Ramiferous.
- A "Beryllium" theme has appeared!
- Themes now print their own name in the box title.
- Benchmarking with hyperfine has finally been fixed.
- Update Linux and NetBSD benchmarks.

@123marvin123:
- Fixed an issue where the palette doesn't respect the user-provided padding value.

@uttarayan21:
- Added command autocompletion for bash and fish.
- Made some refactoring work in libmacchina, fixing a lot of clippy's warnings.

Changes unrelated to the release:
- `macchina` AUR package no longer pulls from main but downloads the most recent release.
- A new AUR package, `macchina-git`, has been created and is being maintained by @uttarayan21.